--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 genres: ['Horror', 'Mystery', 'Thriller'],
                 synopsis: 'A group of students encounter strange and terrifying events during their community service in a remote village. This film is an extended version of 2022s KKN di Desa Penari.',
                 posterUrl: 'https://image.tmdb.org/t/p/w300/wyRVXRygEOPpjTIcDz3z7ZXLZ45.jpg',
-                streamUrl: 'https://g6m5vwc8rl.premilkyway.com/hls2/01/03294/93vmdp8difaq_x/index-v1-a1.m3u8?t=x3OyDI5eSw90K1k5w3QsST82KzOvpBaF1wEGeoExlQA&s=1743256725&e=129600&f=46591991&srv=R7khaR4Jtgqr&i=0.4&sp=500&p1=R7khaR4Jtgqr&p2=R7khaR4Jtgqr&asn=7713'
+                streamUrl: 'https://cyyroro04xrqr.premilkyway.com/hls2/01/00424/v8izxqfc5dvo_h/index-v1-a1.m3u8?t=vCU5zEIhAo28CIHMJbxJ7QuH7CqmF7EkfICzB5CZ0OY&s=1743347924&e=129600&f=2122535&srv=jtkd5kf4kett&i=0.4&sp=500&p1=jtkd5kf4kett&p2=jtkd5kf4kett&asn=24203'
             },
             'joker': {
                 title: 'Badarawuhi Di Desa Penari',
